--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><b>Sobre</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		 <a class="dropdown-item" href="#"><u><i>O que quer saber sobre mim?</u></i></a>
+		 <a class="dropdown-item" href="#"><b>O que quer saber sobre mim?</b></a>
                 <a class="dropdown-item" href="sobre-mim.php">
 		        <span class="glyphicon glyphicon-briefcase">Sobre mim </span> </a>
                 <a class="dropdown-item" href="artigos.php"> 
@@ -99,7 +99,7 @@
                        <span class="glyphicon glyphicon-usd"><b>Trabalho</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		        <a class="dropdown-item" href="#"><b><i>O que fazemos ? </i></b></a>
+		        <a class="dropdown-item" href="#"><b>O que fazemos ?</b></a>
 		        <a class="dropdown-item" href="html/webdeveloper.html">Web Developer</a>
                         <a class="dropdown-item" href="html/google-seo.html">SEO</a>
                         <a class="dropdown-item" href="html/design-grafico.html">Design Gráfico</a>
@@ -113,8 +113,8 @@
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		         <a class="dropdown-item" href="#"><b>Links (Sites e Rede Social(</b></a>
-		         <a class="dropdown-item" href="#"><u><i>Ana Gauna Tech</i></u></a>
+		         <a class="dropdown-item" href="#"><b>Links</b></a>
+		         <a class="dropdown-item-center" href="#"><i>Ana Gauna Tech</i></a>
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
 			    <span class="glyphicon glyphicon-globe">Blogspot </span> </a>
@@ -125,12 +125,12 @@
 			    <a class="dropdown-item" href="https://github.com/amgauna">GitHUB</a>
 			    <a class="dropdown-item" href="https://behance.net/amgauna">Behance</a>
 			    <a class="dropdown-item" href="https://medium.com/@anagauna">Medium</a>
-			    <a class="dropdown-item" href="#"><u><i>Amgauna Tecnologia</u></i></a>
+			    <a class="dropdown-item-center" href="#"><i>Amgauna Tecnologia</i></a>
 		            <a class="dropdown-item" href="http://www.amgauna.com.br"> Website Comercial</a>
 			    <a class="dropdown-item" href="https://facebook.com/amgauna">Loja Facebook</a>
 			    <a class="dropdown-item" href="https://instagram.com/amgauna">Instagram</a>
 			    <a class="dropdown-item" href="https://twitter.com/amgauna">Twitter</a>
-			    <a class="dropdown-item" href="#"><u><i>Mulher Tech Blog</u></i></a>
+			    <a class="dropdown-item-center" href="#"><i>Mulher Tech Blog</i></a>
 			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">Blogspot</a>
 			    <a class="dropdown-item" href="http://mulhertech.com.br">Website</a>
 		    </div>
