--- a/index.html
+++ b/index.html
@@ -113,26 +113,22 @@
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
 		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-		         <a class="dropdown-item" href="#"><b>Links</b></a>
-		         <a class="dropdown-item-center" href="#"><i>Ana Gauna Tech</i></a>
-			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Website Pessoal</a>
+		         <a class="dropdown-item" href="#"><b>Onde é que eu estou?</b></a> 
+			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
-			    <span class="glyphicon glyphicon-globe">Blogspot </span> </a>
-			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Facebook</a>
-			    <a class="dropdown-item" href="https://instagram.com/anagaunatech">Instagram</a>
-			    <a class="dropdown-item" href="https://twitter.com/anagaunatech">Twitter</a>
-			    <a class="dropdown-item" href="https://linkedin.com/in/amgauna">Linkedin</a>			
-			    <a class="dropdown-item" href="https://github.com/amgauna">GitHUB</a>
-			    <a class="dropdown-item" href="https://behance.net/amgauna">Behance</a>
-			    <a class="dropdown-item" href="https://medium.com/@anagauna">Medium</a>
-			    <a class="dropdown-item-center" href="#"><i>Amgauna Tecnologia</i></a>
-		            <a class="dropdown-item" href="http://www.amgauna.com.br"> Website Comercial</a>
-			    <a class="dropdown-item" href="https://facebook.com/amgauna">Loja Facebook</a>
-			    <a class="dropdown-item" href="https://instagram.com/amgauna">Instagram</a>
-			    <a class="dropdown-item" href="https://twitter.com/amgauna">Twitter</a>
-			    <a class="dropdown-item-center" href="#"><i>Mulher Tech Blog</i></a>
-			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">Blogspot</a>
-			    <a class="dropdown-item" href="http://mulhertech.com.br">Website</a>
+			    <a class="dropdown-item" href="https://facebook.com/anagaunatech">Ana Gauna - Facebook</a>
+			    <a class="dropdown-item" href="https://instagram.com/anagaunatech">Ana Gauna - Instagram</a>
+			    <a class="dropdown-item" href="https://twitter.com/anagaunatech">Ana Gauna - Twitter</a>
+			    <a class="dropdown-item" href="https://linkedin.com/in/amgauna">Ana Gauna - Linkedin</a>			
+			    <a class="dropdown-item" href="https://github.com/amgauna">Ana Gauna - GitHUB</a>
+			    <a class="dropdown-item" href="https://behance.net/amgauna">Ana Gauna - Adobe Behance</a>
+			    <a class="dropdown-item" href="https://medium.com/@anagauna">Ana Gauna - Medium</a>
+		        <a class="dropdown-item" href="http://www.amgauna.com.br"> Amgauna Tecnologia - Website Comercial</a>
+			    <a class="dropdown-item" href="https://facebook.com/amgauna">Amgauna Tecnologia - Loja Facebook</a>
+			    <a class="dropdown-item" href="https://instagram.com/amgauna">Amgauna Tecnologia - Instagram</a>
+			    <a class="dropdown-item" href="https://twitter.com/amgauna">Amgauna Tecnologia - Twitter</a>
+			    <a class="dropdown-item" href="https://mulhertech.blogspot.com">MulherTech Blog - Google Blogspot</a>
+			    <a class="dropdown-item" href="http://mulhertech.com.br">MulherTech - Website Comercial</a>
 		    </div>
         </li>
 
