--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                        <span class="glyphicon glyphicon-briefcase"><b>Links</b> </span> 
 		    </a>
-		    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+		    <div class="dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
 		         <a class="dropdown-item" href="#"><b>Onde eu estou?</b></a> 
 			    <a class="dropdown-item" href="http://www.anagauna.eti.br">Ana Gauna - Website Pessoal</a>
 			    <a class="dropdown-item" href="https://anagaunatech.blogspot.com">
@@ -123,10 +123,8 @@
 			    <a class="dropdown-item" href="https://github.com/amgauna">Ana Gauna - GitHUB</a>
 			    <a class="dropdown-item" href="https://behance.net/amgauna">Ana Gauna - Adobe Behance</a>
 			    <a class="dropdown-item" href="https://medium.com/@anagauna">Ana Gauna - Medium</a>
-			</div>	
-			<div class="dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-				<a class="dropdown-item" href="#"><b>Onde eu trabalho ?</b> </a>
-		        <a class="dropdown-item" href="http://www.amgauna.com.br"> Amgauna Tecnologia - Website Comercial</a>
+			    <a class="dropdown-item" href="#"><b>Onde eu trabalho ?</b> </a>
+		            <a class="dropdown-item" href="http://www.amgauna.com.br"> Amgauna Tecnologia - Website Comercial</a>
 			    <a class="dropdown-item" href="https://facebook.com/amgauna">Amgauna Tecnologia - Loja Facebook</a>
 			    <a class="dropdown-item" href="https://instagram.com/amgauna">Amgauna Tecnologia - Instagram</a>
 			    <a class="dropdown-item" href="https://twitter.com/amgauna">Amgauna Tecnologia - Twitter</a>
@@ -160,7 +158,7 @@
             <li class="nav-item">          
 	        <form class="form-inline" action="#">
                    <input type="text" class="form-control" placeholder="Pesquisar" aria-label="search"> 
-			<button type="submit"> <i class="fa fa-search btn-success"> </i> </button>
+			<button type="submit" class="btn-success"> <i class="fa fa-search"> </i> </button>
                 </form>
 	     </li>
 	  
